# klinger_project_2

./: README.md  meson.build  meson_options.txt
doc/: klinger_project_2.tex  main.tex
include/: .gitignore
include/spdlog/: spdlog.h
include/spdlog/fmt/: fmt.h
src/: main.cpp
