option('asio_include_dir', type : 'string', value : '/home/jonny/asio-1.18.1/include', description : 'the include dir of asio')
option('cli11_include_dir', type : 'string', value : '/home/jonny/CLI11', description : 'the dir containing CLI11.hpp')
option('spdlog_include_dir', type : 'string', value : '/home/jonny/spdlog/include', description : 'the include dir of spdlog')